Fixed scroll down button's z-index

--- a/moon/scss/custom.scss
+++ b/moon/scss/custom.scss
@@ -744,6 +744,7 @@ body {
   cursor: pointer;
   transform: rotate(90deg);
   transform-origin: bottom right;
+  z-index: 11;
 }
 
 #poster-scroll span {
@@ -828,6 +829,7 @@ footer {
   line-height: 1.5;
   text-align: center;
   opacity: .5;
+  z-index: 10;
 
   img {
     width: 160px;
